--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -33,7 +33,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start",
+    "start": "next start"
   },
   "eslintConfig": {
     "extends": [
