--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -30,6 +30,9 @@
     "recharts": "^2.12.7",
     "web-vitals": "^2.1.4"
   },
+  "engines": {
+    "node": "14.x"
+  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
