--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -31,9 +31,10 @@
     "web-vitals": "^2.1.4"
   },
   "engines": {
-    "node": "14.x"
+    "node": "16.x"
   },
   "scripts": {
+    "vercel-build": "npm install && npm run build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
