--- a/Backend/Dockerfile
+++ b/Backend/Dockerfile
@@ -1,20 +1,15 @@
-# Use the official Python image from Docker Hub
-FROM python:3.11
+# Use the official Python image
+FROM python:3.11-slim
 
-# Set the working directory inside the container
-WORKDIR /app/backend
+# Set the working directory in the container
+WORKDIR /app
 
-# Copy the requirements.txt file to the container
-COPY backend/requirements.txt .
-
-# Install the dependencies
+# Copy requirements.txt and install dependencies
+COPY requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
 
-# Copy the entire backend directory into the container
-COPY backend/ .
-
-# Expose the port that your app runs on
-EXPOSE 8000
+# Copy the entire content of the Backend folder
+COPY . .
 
 # Command to run the application
-CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000"]
+CMD ["gunicorn", "main:app", "--host", "0.0.0.0", "--port", "80"]
